--- a/notebooks/When Rotten Tomatoes isn’t Enough CSV.ipynb
+++ b/notebooks/When Rotten Tomatoes isn’t Enough CSV.ipynb
@@ -34,8 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pysparkzip = \"<>/cassandra/dse-6.0.4/resources/spark/python/lib/pyspark.zip\"\n",
-    "py4jzip = \"\"<>/cassandra/dse-6.0.4/resources/spark/python/lib/py4j-0.10.4-src.zip\""
+    "pysparkzip = \"<>/datastax/dse-6.0.4/resources/spark/python/lib/pyspark.zip\"\n",
+    "py4jzip = \"<>/datastax/dse-6.0.4/resources/spark/python/lib/py4j-0.10.4-src.zip\""
    ]
   },
   {
@@ -184,7 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "movieTitle = \"??\""
+    "movieTitle = \"firstman\""
    ]
   },
   {
@@ -672,9 +672,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
