Adding docker support

--- a/notebooks/When Rotten Tomatoes isn’t Enough CSV.ipynb
+++ b/notebooks/When Rotten Tomatoes isn’t Enough CSV.ipynb
@@ -30,17 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pysparkzip = \"<>/datastax/dse-6.0.4/resources/spark/python/lib/pyspark.zip\"\n",
-    "py4jzip = \"<>/datastax/dse-6.0.4/resources/spark/python/lib/py4j-0.10.4-src.zip\""
+    "pysparkzip = \"/opt/dse/resources/spark/python/lib/pyspark.zip\"\n",
+    "py4jzip = \"/opt/dse/resources/spark/python/lib/py4j-0.10.4-src.zip\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +59,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/pandas/_libs/__init__.py:4: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from .tslib import iNaT, NaT, Timestamp, Timedelta, OutOfBoundsDatetime\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/__init__.py:26: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import (hashtable as _hashtable,\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/dtypes/common.py:6: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos, lib\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/util/hashing.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import hashing, tslib\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/indexes/base.py:7: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import (lib, index as libindex, tslib as libts,\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/tseries/offsets.py:21: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.tslibs.offsets as liboffsets\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/ops.py:16: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos as libalgos, ops as libops\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/indexes/interval.py:32: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs.interval import (\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/internals.py:14: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import internals as libinternals\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/sparse/array.py:33: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.sparse as splib\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/window.py:36: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.window as _window\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/groupby/groupby.py:68: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import (lib, reduction,\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/core/reshape/reshape.py:30: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos as _algos, reshape as _reshape\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/io/parsers.py:45: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  import pandas._libs.parsers as parsers\n",
+      "/usr/local/lib/python2.7/dist-packages/pandas/io/pytables.py:50: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  from pandas._libs import algos, lib, writers as libwriters\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas\n",
     "import cassandra\n",
@@ -85,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from cassandra.cluster import Cluster\n",
     "\n",
-    "cluster = Cluster(['127.0.0.1'])\n",
+    "cluster = Cluster(['dse'])\n",
     "session = cluster.connect()"
    ]
   },
@@ -143,9 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<cassandra.cluster.ResultSet at 0x7f5a30ea75d0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "session.execute(\"\"\"\n",
     "    CREATE KEYSPACE IF NOT EXISTS demo1 \n",
@@ -163,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,9 +254,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CREATE TABLE IF NOT EXISTS movie_tweets_firstman_pos (twitterid bigint, tweet text, PRIMARY KEY (twitterid))\n",
+      "CREATE TABLE IF NOT EXISTS movie_tweets_firstman_sad (twitterid bigint, tweet text, PRIMARY KEY (twitterid))\n"
+     ]
+    }
+   ],
    "source": [
     "for emotion in positiveNegative: \n",
     "    \n",
@@ -235,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,11 +336,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pos\n",
+      "(1050525986612289541, u'So psyched for this movie :) FirstMan GatewayFilmCenter  Gateway Film Center\\r\\n')\n",
+      "(1051492934749573120, u'FirstMan - Awesome experience watching it on IMAX :) Super making &amp; performances:) Quite Interesting &amp; engaging sc\\u2026\\r\\n')\n",
+      "(1050641775059120128, u'Got a date with RyanGosling and my bf tonight Off to see FirstMan If it\\u2019s half as good as LaLaLand I\\u2019ll be very happy :D\\r\\n')\n",
+      "(1052314895641968640, u\"Admittedly it's a little on the slow side but I really enjoyed FirstMan It was powerful tense and moving when i\\u2026\\r\\n\")\n",
+      "(1051050881741807616, u'Looking forward to watching FirstMan starring  brilliant actors RyanGosling and ClaireFoy Certified 88% fresh\\u2026\\r\\n')\n",
+      "(1049212830254333953, u\"Definitely going to to see this with MM when I'm back home in NYC next weekend :) FirstManhttps://tco/FlcWO4vbt7\\r\\n\")\n",
+      "(1051554359589462016, u\"33ang3lcuddles THR :-) FirstMan: Oh good I'll try and see it then xxx\\r\\n\")\n",
+      "(1052324080513425414, u' ITMODcast: \\u201cIn the 60s men had to go to the moon to cry\\u201d - sidewalksiren firing shots at FirstMan in our latest REVIEWCast\\r\\n')\n",
+      "(1051745424338501632, u'This is probably the second time that Hollywood has made a fantastic movie of the first moon landing This time the\\u2026\\r\\n')\n",
+      "(1052326101245222913, u'Going to see FirstMan They like outer space I like Ryan Gosling\\r\\n')\n",
+      "sad\n",
+      "(1052314895641968640, u\"Admittedly it's a little on the slow side but I really enjoyed FirstMan It was powerful tense and moving when i\\u2026\\r\\n\")\n",
+      "(1052315399029645312, u'If you like feeling all the symptoms of severe motion sickness then FirstMan is the movie for you\\r\\n')\n",
+      "(1052327920595820544, u'At points in FirstMan i felt totally overwhelmed by what i was seeing the movie is a total visual masterclassH\\u2026\\r\\n')\n",
+      "(1052324080513425414, u' ITMODcast: \\u201cIn the 60s men had to go to the moon to cry\\u201d - sidewalksiren firing shots at FirstMan in our latest REVIEWCast\\r\\n')\n",
+      "(1052316400830820353, u'FirstMan was too long and had a few other faults but I mostly enjoyed it especially the score (the landing seque\\u2026\\r\\n')\n",
+      "(1052326205385404416, u'Just imagine how gutted Neil would have been if he landed on the moon and it was only a half moon that day Would h\\u2026\\r\\n')\n",
+      "(1052313226526973952, u'A day after seeing FirstMan I\\u2019m still haunted by DSChazelle almost painful study of grief drive and terror Just\\u2026\\r\\n')\n"
+     ]
+    }
+   ],
    "source": [
     "for emotion in positiveNegative:\n",
     "    print emotion\n",
@@ -319,11 +402,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Postive Table Count: \n"
+     ]
+    }
+   ],
    "source": [
     "countTokens = udf(lambda words: len(words), IntegerType())\n",
     "\n",
-    "spark = SparkSession.builder.appName('demo').master(\"local\").getOrCreate()\n",
+    "spark = SparkSession.builder.appName('demo').master(\"dse://dse:9042\").getOrCreate()\n",
     "\n",
     "tableNamePos = \"movie_tweets_%s_pos\" % (movieTitle.lower())\n",
     "tableNameSad = \"movie_tweets_%s_sad\" % (movieTitle.lower())\n",
@@ -672,9 +763,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -686,7 +777,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
