--- a/notebooks/Getting Started.ipynb
+++ b/notebooks/Getting Started.ipynb
@@ -62,7 +62,8 @@
     "* docker logs pydata_jupyter_1 \n",
     "<img src=\"images/jupyterterm.png\" width=\"1000\" height=\"200\">\n",
     "* Example: http://127.0.0.1:8889/?token=dcd21bc3a1c1331c6c61d51fb5a9d64c72fca7f4b2a6000e\n",
-    "* Navigate to notebooks directory!! "
+    "* Navigate to notebooks directory!! \n",
+    "* Open When Rotten Tomatoes isn’t Enough CSV.ipynb "
    ]
   },
   {
